--- a/psunote/templates/notes-edit.html
+++ b/psunote/templates/notes-edit.html
@@ -2,8 +2,9 @@
 {% block body %}
 
 <h3 class="my-2">Edit Note</h3>
-<form action="" method="PUT">
+<form action="" method="POST">
   {{ form.hidden_tag() }}
+  <input type="hidden" name="_method" value="PUT">
   <div class="form-group my-3">
     {{ form.title.label }}
     {{ form.title(class_='form-control') }}
