--- a/psunote/templates/index.html
+++ b/psunote/templates/index.html
@@ -11,6 +11,29 @@
     <h4 class="card-title">{{ note.title }}</h4>
     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
       <a href="{{ url_for('notes_edit', note_id=note.id) }}" class="btn btn-primary me-md-2" type="button">Edit Note</a>
+      <a href="#" class="btn btn-primary me-md-2" type="button" data-bs-toggle="modal" data-bs-target="#deleteModal{{ note.id }}">Delete Note</a>
+
+      <!-- Modal for confirming delete -->
+      <div class="modal fade" id="deleteModal{{ note.id }}" tabindex="-1" aria-labelledby="deleteModalLabel{{ note.id }}" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="deleteModalLabel{{ note.id }}">Confirm Delete</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              Are you sure you want to delete this note?
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+              <form action="{{ url_for('notes_delete', note_id=note.id) }}" method="POST" style="display: inline;">
+                <button type="submit" class="btn btn-danger">Delete</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
     <div class="card-text my-3">
       {{ note.description }}
